package eu.telecomnancy.flashcards;

public class ControllerNewCard {

}
