package eu.telecomnancy.flashcards.view;public class ViewNewCard {
}
